<resources>
    <string name="activate">Activate</string>
    <string name="actkey">Product ID:</string>
    <string name="add">Add</string>
    <string name="add_infobox">Add Infobox</string>
    <string name="add_task_point">Add waypoint</string>
    <string name="add_task_point_desc">Add new point to task</string>
    <string name="airspace">Airspace</string>
    <string name="airspace_set">Airspace data</string>
    <string name="airspace_set_desc">Airspace data set</string>
    <string name="airspace_view">Airspace</string>
    <string name="alt_info">Altitude:</string>
    <string name="alt_over_goal">Alt. over goal</string>
    <string name="altitude">Altitude</string>
    <string name="app_name">TermoFly</string>
    <string name="extender">Extender</string>
    <string name="play_speed">Play speed</string>
    <string name="play_speed_desc">Simulation playback speed multiplier</string>
    <string name="enable_blip">Enable blip</string>
    <string name="enable_blip_desc">Sound signal when thermal detected</string>
    <string name="blip_debug">Debug infobox</string>
    <string name="blip_debug_desc">Show Tradar debug data on compass</string>
    <string name="voice_enabled">Voice prompts</string>
    <string name="voice_enabled_desc">Speak thermal direction when detected</string>
    <string name="blip_demo">Demo blips</string>
    <string name="blip_demo_desc">Show blip on any motion (ignores thermal detection)</string>
    <string name="lp_cutoff">LP filter cutoff</string>
    <string name="lp_cutoff_desc">Low-pass Butterworth cutoff (2.0-25.0 Hz). Default 2.5. For ground testing set higher.</string>
    <string name="ar_car">Car driving</string>
    <string name="ar_default">Default</string>
    <string name="ar_device_default">Device default</string>
    <string name="ar_hangglider">Hangglider</string>
    <string name="ar_hg_flex">HG Flex</string>
    <string name="ar_hg_rigid">HG Rigid</string>
    <string name="ar_larger">Larger</string>
    <string name="ar_legal_airspace">Legal restrictions</string>
    <string name="ar_light_colors">Bright</string>
    <string name="ar_manual">Manual</string>
    <string name="ar_mono_colors">Monochrome</string>
    <string name="ar_normal">Normal</string>
    <string name="ar_on_in_thermals">Light up in thermals</string>
    <string name="ar_orientation_auto">Auto</string>
    <string name="ar_orientation_landscape">Landscape</string>
    <string name="ar_orientation_portrait">Portrait</string>
    <string name="ar_paraglider">Paraglider</string>
    <string name="ar_ppg_foot">PPG Foot</string>
    <string name="ar_ppg_wheel">PPG Wheel</string>
    <string name="ar_realtime">Realtime</string>
    <string name="ar_sailplane">Sailplane</string>
    <string name="ar_screen_always_on">Keep screen always on</string>
    <string name="ar_smaller">Smaller</string>
    <string name="ar_striped_colors">Striped</string>
    <string name="ar_vario_volume_loud">Loud</string>
    <string name="ar_vario_volume_medium">Medium</string>
    <string name="ar_vario_volume_off">Turn Off</string>
    <string name="ar_walking">Walking</string>
    <string name="ar_xcglobe_airspace">XCglobe restrictions</string>
    <string name="ask_install_maps">"The maps are not yet installed. Do you want to go to Maps Settings "</string>
    <string name="ask_update_maps">"Maps needs to be updated. Do you want to go to the Maps Settings "</string>
    <string name="ask_upgrade">New Version is Available</string>
    <string name="ask_upgrade_desc">"Do you want to download and install it now "</string>
    <string name="attachment_name">Attachment name</string>
    <string name="auto_export_igc">Save IGC to external storage</string>
    <string name="auto_export_igc_desc">After landing save IGC to public folder /xcglobe/igc</string>
    <string name="back">&lt;&lt; Back</string>
    <string name="back_to_task">Task</string>
    <string name="basic_view">General</string>
    <string name="ble_not_supported">BLE is not supported (Android 4.3 required)</string>
    <string name="cancel">Cancel</string>
    <string name="civlid">CIVL ID</string>
    <string name="comment">Comment</string>
    <string name="competition_task">Competition task</string>
    <string name="create_account">New user</string>
    <string name="create_account_desc">Create new user account at xcglobe.com</string>
    <string name="distance">Distance</string>
    <string name="enable_fai_assistant">FAI assistant</string>
    <string name="enable_fai_assistant_desc">"Enable FAI assistant on 'flight trail map'"</string>
    <string name="enable_livetrack">Enable live tracking</string>
    <string name="enable_livetrack_desc">Enable live tracking (net connection required)</string>
    <string name="enable_map_view">Show map</string>
    <string name="enable_map_view_desc">Show map on main display</string>
    <string name="enable_pocket_livetrack">Live tracking in Power saver</string>
    <string name="enable_pocket_livetrack_desc">Enable Live tracking in Power Saver mode</string>
    <string name="enable_thermal_view">Thermal assistant</string>
    <string name="enable_thermal_view_desc">Enable thermal assistant while circling</string>
    <string name="event_refresh_rate">Screen refresh rate</string>
    <string name="event_refresh_rate_desc">Time between each screen update</string>
    <string name="font_size">Font size</string>
    <string name="font_size_desc">Choose the text size you prefer</string>
    <string name="full_screen">Full screen</string>
    <string name="full_screen_desc">Hide status bar</string>
    <string name="glider_max_speed">Max. speed</string>
    <string name="glider_max_speed_sink">Sink at max. speed</string>
    <string name="glider_min_speed">Min. speed</string>
    <string name="glider_min_speed_sink">Sink at min. speed</string>
    <string name="glider_optimal_speed">Trim speed</string>
    <string name="glider_optimal_speed_sink">Sink at trim speed</string>
    <string name="gmodel">Glider model</string>
    <string name="goal">Goal</string>
    <string name="graphic_display">Visible features</string>
    <string name="gtype">Glider type</string>
    <string name="infoboxes_size">Infoboxes size</string>
    <string name="infoboxes_size_desc">Choose how large the infoboxes will be</string>
    <string name="keep_screen_on">Screen turn on/off</string>
    <string name="keep_screen_on_desc">When to turn screen on/off</string>
    <string name="livetrack_time_interval">Time interval</string>
    <string name="livetrack_time_interval_desc">Time between position update</string>
    <string name="logging_interval">Logging time interval</string>
    <string name="maps_colors">Maps color scheme</string>
    <string name="maps_colors_desc">Select maps color scheme</string>
    <string name="menu_about">About TermoFly</string>
    <string name="menu_about_desc">Version, licence, upgrade, etc.</string>
    <string name="menu_advanced">Other options</string>
    <string name="menu_advanced_desc">Various other adjustments and settings</string>
    <string name="menu_data_sources">Install maps</string>
    <string name="menu_data_sources_desc">Download terrain, cities, thermails, takeoffs,…</string>
    <string name="menu_display">Display &amp; Sound</string>
    <string name="menu_display_desc">Main display and audio settings</string>
    <string name="menu_display_general">Screen settings</string>
    <string name="menu_glider">Glider properties</string>
    <string name="menu_glider_desc">Glider type and performance</string>
    <string name="menu_igc">IGC recording</string>
    <string name="menu_igc_desc">Headers, recording interval, …</string>
    <string name="menu_livetrack">Live tracking</string>
    <string name="menu_livetrack_desc">Live tracking options</string>
    <string name="menu_power">Battery care</string>
    <string name="menu_power_desc">Settings for prolonging battery life</string>
    <string name="menu_sound">Sound</string>
    <string name="menu_task">Task</string>
    <string name="menu_tasks">Tasks and waypoints</string>
    <string name="menu_tasks_desc">Manage tasks and waypoints</string>
    <string name="menu_unit">Units</string>
    <string name="menu_unit_desc">Meters, feets, etc…</string>
    <string name="menu_vario">Vario options</string>
    <string name="menu_vario_desc">Sound, interval, …</string>
    <string name="movement_detection_type">Movement detection</string>
    <string name="movement_detection_type_desc">When to start/stop recording</string>
    <string name="ok">OK</string>
    <string name="optimizing_interval">Distance calculating</string>
    <string name="optimizing_interval_desc">How often is distance recalculated</string>
    <string name="options">Options</string>
    <string name="password">Password</string>
    <string name="pilotname">Pilot name</string>
    <string name="pocket_button">Normal mode</string>
    <string name="pocket_description">In power saver mode your track will be logged, but all other functionalities are disabled to prolong battery life.</string>
    <string name="pocket_title">Power saver</string>
    <string name="points">Turnpoints</string>
    <string name="quit">Quit</string>
    <string name="real_time_refresh_rate_thermaling">Realtime thermaling</string>
    <string name="real_time_refresh_rate_thermaling_desc">Do not reduce refresh rate while thermaling</string>
    <string name="remove_all_boxes">Remove all</string>
    <string name="rescan">Rescan</string>
    <string name="screen_orientation">Screen orientation</string>
    <string name="screen_orientation_desc">Auto, portrait or landscape</string>
    <string name="searching">Searching …</string>
    <string name="send_to_email">Send to email</string>
    <string name="server">Server</string>
    <string name="show_datalist">Application status</string>
    <string name="show_datalist_desc">Show various application data</string>
    <string name="sink_tone">Sink tone</string>
    <string name="speed">Speed</string>
    <string name="stabilize_vario">Stabilize vario</string>
    <string name="stabilize_vario_desc">Stabilize barometric variometer</string>
    <string name="start_demo">Test flight</string>
    <string name="start_demo_desc">Watch test flight demonstration</string>
    <string name="start_recording">Start recording</string>
    <string name="status">Status:</string>
    <string name="target_email">Target email</string>
    <string name="target_email_desc">For sending IGC after landing</string>
    <string name="task_distance">Task distance:</string>
    <string name="task_end">Task finish</string>
    <string name="task_name">Task name</string>
    <string name="task_start">Task start</string>
    <string name="test">Test</string>
    <string name="test_livetrack_desc">Check LiveTrack connection</string>
    <string name="use_barometer">Use barometer</string>
    <string name="use_barometer_desc">Use internal barometer, if available</string>
    <string name="use_external_device">External sensor</string>
    <string name="use_external_device_desc">Use external sensor device</string>
    <string name="use_sd">Use SD Card</string>
    <string name="use_sd_desc">Store files to external memory card, if available</string>
    <string name="username">Username</string>
    <string name="vario">Vario</string>
    <string name="vario_helpers">Vario bubbles</string>
    <string name="vario_helpers_desc">Show vario bubbles while thermaling</string>
    <string name="vario_interval">Vario averager</string>
    <string name="vario_interval_desc">Vario averager time interval</string>
    <string name="vario_kalman">Vario smoothing</string>
    <string name="vario_kalman_desc">Use Kalman filter on barometer data</string>
    <string name="vario_volume">Vario sound</string>
    <string name="vario_volume_desc">Vario beeper volume</string>
    <string name="zip_file">Zip file</string>
</resources>