<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:textColor="@color/text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/send_to_email" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/target_email" />
        <EditText android:id="@id/email_igc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textEmailAddress" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/comment" />
        <EditText android:id="@id/igc_comment" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/attachment_name" />
        <EditText android:id="@id/igc_filename" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" />
        <CheckBox android:id="@id/igc_zipit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/zip_file" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/dialogButtonOK" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ok" android:layout_weight="5.0" android:onClick="clickOk" />
            <Button android:id="@id/dialogButtonCancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="5.0" android:onClick="clickCancel" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
