<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/back2" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/blue2" android:gravity="center_horizontal" android:id="@id/txt_scanning" android:background="@color/backgray2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/searching" />
    <ListView android:id="@id/bt_devices_list" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:stackFromBottom="true" android:divider="@color/textgray2" android:dividerHeight="1.0dip" android:layout_weight="2.0" />
    <Button android:id="@id/button_rescan" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/rescan" />
    <Button android:id="@id/button_cancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel" />
</LinearLayout>
